--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <!-- ---list -->
     <br>
         <!-- <script src="./js/test1.js" type="module"></script> -->
-        <script src="./js/a4.4.js" type="module"></script>
+        <script src="./js/comps_base.js" type="module"></script>
 
-    <!-- <script src="./js/a2.23.js" type="module"></script> -->
+    <!--<script src="./js/a4.4.js" type="module"></script>
+ <script src="./js/a2.23.js" type="module"></script> -->
 
 
 
