--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <br>
     <!-- ---list -->
     <br>
-        <!-- <script src="./js/test1.js" type="module"></script> -->
         <!-- <script src="./js/comps_base.js" type="module"></script> -->
-
-    <script src="./js/a4.4.js" type="module"></script>
+        <!-- <script src="./js/test1.js" type="module"></script> -->
+    <!-- <script src="./js/a4.4.js" type="module"></script> -->
+    <!-- <script src="./js/a4.5.js" type="module"></script> -->
+        <script src="./js/a4.6.js" type="module"></script>
  <!-- <script src="./js/a2.23.js" type="module"></script> -->
 
 
