--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <!-- <script src="./js/test1.js" type="module"></script> -->
     <!-- <script src="./js/a4.4.js" type="module"></script> -->
     <!-- <script src="./js/a4.5.js" type="module"></script> -->
-        <script src="./js/a4.6.js" type="module"></script>
+        <!-- <script src="./js/a4.6.js" type="module"></script> -->
+            <script src="./js/a4.7.js" type="module"></script>
+
  <!-- <script src="./js/a2.23.js" type="module"></script> -->
 
 
