--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <!-- <script src="./js/a4.21.js" type="module"></script> -->
             <!-- <script src="./js/a4.22.js" type="module"></script> -->
             <!-- <script src="./js/a4.23.js" type="module"></script> -->
-            <script src="./js/a4.24.js" type="module"></script>
+            <!-- <script src="./js/a4.24.js" type="module"></script> -->
+            <script src="./js/a4.25.js" type="module"></script>
 
 
         <!-- <script src="./js/a2.23.js" type="module"></script> -->
