--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <!-- <script src="./js/a4.26.js" type="module"></script> -->
             <!-- <script src="./js/a4.27.js" type="module"></script> -->
             <!-- <script src="./js/a4.28.js" type="module"></script> -->
-            <script src="./js/a4.30.js" type="module"></script>
+            <!-- <script src="./js/a4.30.js" type="module"></script> -->
+            <script src="./js/a4.32.js" type="module"></script>
 
 
         <!-- <script src="./js/a2.23.js" type="module"></script> -->
