--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <!-- <script src="./js/a4.27.js" type="module"></script> -->
             <!-- <script src="./js/a4.28.js" type="module"></script> -->
             <!-- <script src="./js/a4.30.js" type="module"></script> -->
-            <script src="./js/a4.32.js" type="module"></script>
+            <!-- <script src="./js/a4.32.js" type="module"></script> -->
+            <!-- <script src="./js/a4.33.js" type="module"></script> -->
+            <script src="./js/a4.34.js" type="module"></script>
 
 
         <!-- <script src="./js/a2.23.js" type="module"></script> -->
